# bigbang

service/: .env  Cargo.toml  docker-compose.yml
service/src/: database.rs  home.rs  http.rs  integration.rs  main.rs  server.rs  service.rs
service/src/database/: component.rs  migrate.rs
service/src/home/: component.rs  http.rs
service/src/home/http/: get.rs
service/src/http/hal/: document.rs  links.rs
service/src/integration/: database.rs
service/src/integration/tests/: home.rs  metrics.rs
service/src/server/: component.rs
service/src/service/: testing.rs
