[package]
name = "bigbang"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
opentelemetry = "0.12.0"
opentelemetry-jaeger = "0.11.0"
tracing = { version = "0.1.22", features = ["log-always"] }
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-opentelemetry = "0.11.0"
tracing-subscriber = "0.2.15"
actix-rt = "1.1.1"
env_logger = "0.8.2"
dotenv = "0.15.0"
