[package]
name = "bigbang"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
opentelemetry = "0.12.0"
opentelemetry-jaeger = "0.11.0"
tracing = { version = "0.1.22", features = ["log-always"] }
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-opentelemetry = "0.11.0"
tracing-subscriber = "0.2.15"
actix-rt = "1.1.1"
env_logger = "0.8.2"
dotenv = "0.15.0"
actix-cors = "0.5.4"
actix-http = "2.2.0"
actix-service = "1.0.6"
actix-web = "3.3.2"
actix-web-prom = "0.5.1"
prometheus = "0.11.0"
futures = "0.3.12"
serde = {version = "1.0.123", features = ["derive"] }
config = "0.10.1"
deadpool = "0.5.2"
deadpool-postgres = "0.5.6"
tokio-postgres = { version = "0.5.5", features = ["with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
postgres-types = { version = "0.1.3", features = ["derive", "with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
rust-embed = "5.9.0"

[package.metadata.commands]
clippy = "find . -name *.rs | grep -v target | xargs touch; cargo clippy"
